infra/k8s/assets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 #namespace: ams-namespace 
 name: assets-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: assets
  template:
   metadata:
    labels:
     app: assets
   spec:
    containers:
     - name: assets
       image: rjsaint/assets
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: assets-srv
spec:
  selector:
    app: assets
  ports:
    - name: assets
      protocol: TCP
      port: 3002
      targetPort: 3002
