infra/k8s/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 #namespace: ams-namespace  
 name: gateway-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: gateway
  template:
   metadata:
    labels:
     app: gateway
   spec:
    containers:
     - name: gateway
       image: rjsaint/gateway
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: gateway-srv
spec:
  # type: NodePort
  selector:
    app: gateway
  ports:
    - name: gateway
      protocol: TCP
      port: 4000
      targetPort: 4000
      # nodePort: 32000
