infra/k8s/maintenance-records-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 #namespace: ams-namespace 
 name: maintenancerecords-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: maintenancerecords
  template:
   metadata:
    labels:
     app: maintenancerecords
   spec:
    containers:
     - name: maintenancerecords
       image: rjsaint/maintenancerecords
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: maintenancerecords-srv
spec:
  selector:
    app: maintenancerecords
  ports:
    - name: maintenancerecords
      protocol: TCP
      port: 3003
      targetPort: 3003
