infra/k8s/organizations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 #namespace: ams-namespace 
 name: organizations-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: organizations
  template:
   metadata:
    labels:
     app: organizations
   spec:
    containers:
     - name: organizations
       image: rjsaint/organizations
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: organizations-srv
spec:
  selector:
    app: organizations
  ports:
    - name: organizations
      protocol: TCP
      port: 3004
      targetPort: 3004
