infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 #namespace: ams-namespace 
 name: users-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: users
  template:
   metadata:
    labels:
     app: users
   spec:
    containers:
     - name: users
       image: rjsaint/users:latest
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: users-srv
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3001
      targetPort: 3001
