infra/k8s/users-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: ams-namespace 
  name: user-mongo-depl
spec:
  replicas: 1
  selector:
   matchLabels:
    app: user-mongo
  template:
   metadata:
     labels:
       app: user-mongo
   spec:
     volumes:
      - name: mongo-pv-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
     containers:
       - name: user-mongo
         image: mongo:latest
         imagePullPolicy: Never
         volumeMounts:
          - mountPath: '/data/db'
            name: mongo-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: user-mongo-srv
spec:
  selector:
   app: user-mongo
  ports:
   - name: db
     protocol: TCP
     port: 27017
     targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  #namespace: ams-namespace 
  name: mongo-srv
spec:
  type: NodePort
  selector:
    app: user-mongo
  ports:
    - name: user-mongo-np
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 31760
