infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #namespace: ams-namespace 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: gateway-srv
                port:
                  number: 4000
          # - path: /posts
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: query-srv
          #       port:
          #         number: 4002
          # - path: /posts/?(.*)/comments
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: comments-srv
          #       port:
          #         number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 80
